--- a/ML_flow_app/research/trials.ipynb
+++ b/ML_flow_app/research/trials.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -275,48 +275,33 @@
      "output_type": "stream",
      "text": [
       "config\\config.yaml\n",
-      "[2023-08-05 23:28:52,447: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-08-05 23:28:52,448: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-08-05 23:28:52,449: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-08-05 23:28:52,450: INFO: common: created directory at: artifacts]\n",
-      "[2023-08-05 23:28:52,451: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-08-05 23:28:52,915: INFO: 2174002776: artifacts/data_ingestion/data.zip download! with following info: \n",
-      "Server: GitHub.com\n",
-      "Date: Sat, 05 Aug 2023 17:58:53 GMT\n",
-      "Content-Type: text/html; charset=utf-8\n",
-      "Vary: X-PJAX, X-PJAX-Container, Turbo-Visit, Turbo-Frame, Accept-Encoding, Accept, X-Requested-With\n",
-      "ETag: W/\"f005c7f82d3b16b5fdfbec197aa9285b\"\n",
-      "Cache-Control: max-age=0, private, must-revalidate\n",
-      "Strict-Transport-Security: max-age=31536000; includeSubdomains; preload\n",
-      "X-Frame-Options: deny\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-XSS-Protection: 0\n",
+      "[2023-08-05 23:34:21,504: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-08-05 23:34:21,506: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-08-05 23:34:21,507: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-08-05 23:34:21,508: INFO: common: created directory at: artifacts]\n",
+      "[2023-08-05 23:34:21,509: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-08-05 23:34:22,030: INFO: 2174002776: artifacts/data_ingestion/data.csv download! with following info: \n",
+      "content-disposition: attachment; filename=SAIL.NS.csv\n",
+      "content-type: text/csv;charset=utf-8\n",
+      "vary: Origin\n",
+      "cache-control: private, max-age=10, stale-while-revalidate=20\n",
+      "y-rid: 5sdcj9hict3p6\n",
+      "x-yahoo-request-id: 5sdcj9hict3p6\n",
+      "x-request-id: cdbb6cf4-ba47-4cba-a3c1-0054f6e08082\n",
+      "x-envoy-upstream-service-time: 124\n",
+      "date: Sat, 05 Aug 2023 18:04:22 GMT\n",
+      "server: ATS\n",
+      "x-envoy-decorator-operation: finance-chart-api--mtls-production-sg3.finance-k8s.svc.yahoo.local:4080/*\n",
+      "Age: 0\n",
+      "Strict-Transport-Security: max-age=31536000\n",
       "Referrer-Policy: no-referrer-when-downgrade\n",
-      "Content-Security-Policy: default-src 'none'; base-uri 'self'; child-src github.com/assets-cdn/worker/ gist.github.com/assets-cdn/worker/; connect-src 'self' uploads.github.com objects-origin.githubusercontent.com www.githubstatus.com collector.github.com raw.githubusercontent.com api.github.com github-cloud.s3.amazonaws.com github-production-repository-file-5c1aeb.s3.amazonaws.com github-production-upload-manifest-file-7fdce7.s3.amazonaws.com github-production-user-asset-6210df.s3.amazonaws.com cdn.optimizely.com logx.optimizely.com/v1/events *.actions.githubusercontent.com productionresultssa0.blob.core.windows.net/ productionresultssa1.blob.core.windows.net/ productionresultssa2.blob.core.windows.net/ productionresultssa3.blob.core.windows.net/ productionresultssa4.blob.core.windows.net/ wss://*.actions.githubusercontent.com github-production-repository-image-32fea6.s3.amazonaws.com github-production-release-asset-2e65be.s3.amazonaws.com insights.github.com wss://alive.github.com; font-src github.githubassets.com; form-action 'self' github.com gist.github.com objects-origin.githubusercontent.com; frame-ancestors 'none'; frame-src viewscreen.githubusercontent.com notebooks.githubusercontent.com; img-src 'self' data: github.githubassets.com media.githubusercontent.com camo.githubusercontent.com identicons.github.com avatars.githubusercontent.com github-cloud.s3.amazonaws.com objects.githubusercontent.com objects-origin.githubusercontent.com secured-user-images.githubusercontent.com/ user-images.githubusercontent.com/ private-user-images.githubusercontent.com opengraph.githubassets.com github-production-user-asset-6210df.s3.amazonaws.com customer-stories-feed.github.com spotlights-feed.github.com *.githubusercontent.com; manifest-src 'self'; media-src github.com user-images.githubusercontent.com/ secured-user-images.githubusercontent.com/ private-user-images.githubusercontent.com; script-src github.githubassets.com; style-src 'unsafe-inline' github.githubassets.com; upgrade-insecure-requests; worker-src github.com/assets-cdn/worker/ gist.github.com/assets-cdn/worker/\n",
-      "Set-Cookie: _gh_sess=KMk5kiYCAWrzpy0qvNf8rN6BnJm2x3B8OD6sU3jyOQyb9PKeSNUDNVkmzHiuwkadIBqOObDDDwAaiumi5k0FupFw%2B1YH9N5s5paKV2xpS4haK2rLY1KQEQhkoJnC%2FBhnsUncgkQNDMvTPbofn%2FnJNTiHLz9hLsjTr68DNz40UxZXh3ScS5aM2qyrgS3IktdKV7HE4kpExrn3VJ6EMRF5h%2B1YZemcBEHAfwQgqcyOuFtIJdt4%2BYYRaBrJ1yR3FEidX6MRSlk2N8GdOvHpLwdgfA%3D%3D--Am3psP9%2BKVuXzsE9--%2FR%2BssNO9Ynm99TWN8lamYg%3D%3D; Path=/; HttpOnly; Secure; SameSite=Lax\n",
-      "Set-Cookie: _octo=GH1.1.2143939102.1691258333; Path=/; Domain=github.com; Expires=Mon, 05 Aug 2024 17:58:53 GMT; Secure; SameSite=Lax\n",
-      "Set-Cookie: logged_in=no; Path=/; Domain=github.com; Expires=Mon, 05 Aug 2024 17:58:53 GMT; HttpOnly; Secure; SameSite=Lax\n",
-      "Accept-Ranges: bytes\n",
+      "X-Frame-Options: SAMEORIGIN\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-Content-Type-Options: nosniff\n",
       "Transfer-Encoding: chunked\n",
-      "X-GitHub-Request-Id: E5C6:2C5F63:810AD1:955614:64CE8DDD\n",
-      "connection: close\n",
+      "Connection: close\n",
       "\n",
       "]\n"
-     ]
-    },
-    {
-     "ename": "BadZipFile",
-     "evalue": "File is not a zip file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22940\\4118202919.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mdata_ingestion\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_zip_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22940\\4118202919.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mdata_ingestion\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataIngestion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_ingestion_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mdata_ingestion\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mdata_ingestion\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_zip_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22940\\2174002776.py\u001b[0m in \u001b[0;36mextract_zip_file\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0munzip_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munzip_dir\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0munzip_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexist_ok\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mzipfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mZipFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlocal_data_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mzip_ref\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m             \u001b[0mzip_ref\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextractall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0munzip_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Natwar\\AppData\\Local\\Programs\\Python\\Python37\\lib\\zipfile.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, file, mode, compression, allowZip64, compresslevel)\u001b[0m\n\u001b[0;32m   1256\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1257\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1258\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_RealGetContents\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1259\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'w'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'x'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1260\u001b[0m                 \u001b[1;31m# set the modified flag so central directory gets written\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Natwar\\AppData\\Local\\Programs\\Python\\Python37\\lib\\zipfile.py\u001b[0m in \u001b[0;36m_RealGetContents\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1323\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mBadZipFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"File is not a zip file\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1324\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mendrec\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1325\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mBadZipFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"File is not a zip file\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1326\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdebug\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1327\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mendrec\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mBadZipFile\u001b[0m: File is not a zip file"
      ]
     }
    ],
@@ -326,7 +311,7 @@
     "    data_ingestion_config = config_manager.get_data_ingestion_config()\n",
     "    data_ingestion = DataIngestion(config = data_ingestion_config)\n",
     "    data_ingestion.download_data()\n",
-    "    data_ingestion.extract_zip_file()\n",
+    "    # data_ingestion.extract_zip_file()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
